fix: use absolute asset paths for backgrounds on GitHub Pages

--- a/mobile.html
+++ b/mobile.html
@@ -11,7 +11,8 @@
       html,body { margin:0; width:100%; height:100%; }
   body { font-family:'Press Start 2P', monospace; background:#000; position:relative; display:flex; align-items:center; justify-content:center; overflow:auto; }
   /* Fixed viewport mimic for mobile testing (pixel-exact) */
-  .mobile-frame { width:377px; height:669px; position:relative; box-shadow:0 0 24px #ff00e6,0 0 48px rgba(255,0,230,0.4); border:2px solid #fff; background:#000 url('assets/gig-mobile.png') center center / cover no-repeat; display:flex; align-items:flex-end; justify-content:center; }
+  /* Use absolute path matching Vite base for GitHub Pages so image resolves */
+  .mobile-frame { width:377px; height:669px; position:relative; box-shadow:0 0 24px #ff00e6,0 0 48px rgba(255,0,230,0.4); border:2px solid #fff; background:#000 url('/game.videobingo.prototype/assets/gig-mobile.png') center center / cover no-repeat; display:flex; align-items:flex-end; justify-content:center; }
   /* Aspect-ratio only (original size) */
   iframe { width:100%; aspect-ratio:526 / 402; height:auto; border:0; display:block; box-shadow:0 0 12px #ff00e6; margin:0 0 95px 0; }
       /* Center bottom positioning achieved by flex on body and bottom alignment inside mobile-frame */
