--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
       html,body { margin:0; width:100%; height:100%; }
-  body { font-family:'Press Start 2P', monospace; background:#000 url('assets/gig-desktop.png') center center / cover no-repeat fixed; position:relative; }
+  /* Absolute path so background works on GitHub Pages with base */
+  body { font-family:'Press Start 2P', monospace; background:#000 url('/game.videobingo.prototype/assets/gig-desktop.png') center center / cover no-repeat fixed; position:relative; }
   .iframe-shell { width:500px; height:350px; border:2px solid #fff; box-shadow:0 0 16px #ff00e6; background:#000; position:absolute; right:8.6%; bottom:5.6%; overflow:hidden; }
       iframe { width:100%; height:100%; border:0; display:block; }
     </style>
